fix(dialog/create-link): redefine background color for input wrapper broken by previous global styles
- Define the `.bg-token-main-surface-primary` class in the "Create Link" dialog to overwrite the global style, ensuring that the input wrapper background is visible for both light and dark themes.

Changes summary:
- Addressed an issue where the input wrapper background in the "Create Link" dialog was not visible for light and dark themes due to conflicting global styles. This change ensures that the input wrapper stands out appropriately, providing a clear interaction area for users.

--- a/src/sass/elements/_dialogs.scss
+++ b/src/sass/elements/_dialogs.scss
@@ -148,10 +148,14 @@
 
 	/* ___ Dialog - "Share Link to Chat"  */
 	&:has(input[value^="https://chatgpt.com/share/"]),
-	&:has(input[value^="https://chat.openai.com/share/"]) // "PUBLIC LINK UPDATED"
+	// "PUBLIC LINK UPDATED"
+	&:has(input[value^="https://chat.openai.com/share/"]) {
 
-		{
-		--main-surface-primary: var(--c-surface-3) !important; // bg of link preview and "🔗 Create Link" btn
+		// --main-surface-primary: var(--c-surface-3) !important; // bg of link preview and "🔗 Create Link" btn
+		// // mozda i ukloniti, nije lose i bez ovog ustvari tj da input bude iste boje kao i dialog
+		.bg-token-main-surface-primary {
+			--main-surface-primary: var(--c-surface-3) !important; // bg of link preview and "🔗 Create Link" btn
+		}
 
 		// bg-gradient of link preview
 		.from-token-main-surface-primary {
